--- a/laravel-demo/public/front/css/style.css
+++ b/laravel-demo/public/front/css/style.css
@@ -1619,16 +1619,17 @@ ol {
 }
 
 .newslatter-item .subscribe-form {
-  position: relative;
+  
 }
 
 .newslatter-item .subscribe-form input {
+  font-size: 16px;
   color: #b2b2b2;
   background: #303030;
-  width: 100%;
-  height: 46px;
-  font-size: 16px;
   border: none;
+  height: 46px;
+  margin: 16px 0;
+  width: 100%;
   padding-left: 20px;
 }
 
@@ -1660,11 +1661,14 @@ ol {
   font-weight: 700;
   text-transform: uppercase;
   border: 1px solid #e7ab3c;
-  position: absolute;
   right: 0;
   top: 0;
   padding: 13px 20px 12px;
   cursor: pointer;
+}
+
+.newslatter-item .subscribe-form button:hover {
+  opacity: 0.85;
 }
 
 .copyright-reserved {
@@ -2742,6 +2746,12 @@ ol {
 
 .cart-table table tr td.cart-pic {
   width: 21%;
+  height: 170px;
+}
+
+.cart-table table tr td.cart-pic img {
+  height: 100%;
+  object-fit: contain;
 }
 
 .cart-table table tr td.cart-title {
@@ -2926,6 +2936,11 @@ ol {
   padding: 15px 25px 14px 25px;
   display: block;
   text-align: center;
+  transition: all 0.6s;
+}
+
+.proceed-checkout .proceed-btn:hover {
+  opacity: 0.8;
 }
 
 
@@ -4592,4 +4607,8 @@ ol {
 .benefit-items .single-benefit {
   padding-left: 15px;
   padding-right: 15px;
+}
+
+.icon_heart_alt:hover {
+  color: red;
 }
