--- a/laravel-demo/public/front/css/style.css
+++ b/laravel-demo/public/front/css/style.css
@@ -1171,6 +1171,10 @@ ol {
   margin-bottom: 26px;
 }
 
+.product-item:hover {
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+}
+
 .product-item:hover .pi-pic .icon {
   top: 15px;
   opacity: 1;
