--- a/laravel-demo/public/front/css/style.css
+++ b/laravel-demo/public/front/css/style.css
@@ -1201,7 +1201,7 @@ ol {
   background: #76BC42;
   position: absolute;
   left: 0;
-  top: 20px;
+  top: 0;
   padding: 5px 10px;
   text-transform: uppercase;
 }
