--- a/laravel-demo/public/front/css/style.css
+++ b/laravel-demo/public/front/css/style.css
@@ -2494,6 +2494,19 @@ ol {
   min-width: 100%;
 }
 
+.product-content h3 {
+  margin-bottom: 1rem;
+}
+
+.product-content ul {
+  list-style: inherit;
+  padding: inherit;
+  padding-top: 0;
+  padding-left: 3rem;
+  margin-bottom: 1rem;
+}
+
+
 .specification-table {
   padding-top: 52px;
 }
@@ -2508,9 +2521,8 @@ ol {
 
 .specification-table table tr td {
   border: 1px solid #EFF0F2;
-  text-align: center;
-  padding-top: 18px;
-  padding-bottom: 18px;
+  text-align: left;
+  padding: 18px;
 }
 
 .specification-table table tr td.p-catagory {
