--- a/laravel-demo/public/front/css/style.css
+++ b/laravel-demo/public/front/css/style.css
@@ -1191,7 +1191,7 @@ ol {
 
 .product-item .pi-pic img {
   min-width: 100%;
-  max-height: 193px;
+  max-height: 172px;
   object-fit: contain;
 }
 
@@ -2242,6 +2242,8 @@ ol {
 
 .product-details .pd-color {
   margin-bottom: 25px;
+  display: flex;
+  align-items: center;
 }
 
 .product-details .pd-color h6 {
@@ -2252,54 +2254,36 @@ ol {
 }
 
 .product-details .pd-color .pd-color-choose {
-  display: inline-block;
+  display: flex;
+  flex-direction: row;
 }
 
 .product-details .pd-color .pd-color-choose .cc-item {
-  display: inline-block;
+  display: flex;
   margin-right: 10px;
+  padding: 3px;
+  box-sizing: border-box;
+  border: 1px solid rgba(255, 255, 255, 0);
+  border-radius: 50%;
 }
 
 .product-details .pd-color .pd-color-choose .cc-item input {
   position: absolute;
-  visibility: hidden;
+  display: none;
+  height: 15px;
+  width: 15px;
 }
 
 .product-details .pd-color .pd-color-choose .cc-item label {
-  height: 20px;
-  width: 20px;
-  background: #252525;
+  height: 15px;
+  width: 15px;
   border-radius: 50%;
   cursor: pointer;
   margin-bottom: 0;
 }
 
-.product-details .pd-color .pd-color-choose .cc-item label.cc-red {
-  background: #ee2121;
-}
-
-.product-details .pd-color .pd-color-choose .cc-item label.cc-white {
-  background: #decece;
-}
-
-.product-details .pd-color .pd-color-choose .cc-item label.cc-black {
-  background: #000000;
-}
-
-.product-details .pd-color .pd-color-choose .cc-item label.cc-gray {
-  background: #C0C0C0;
-}
-
-.product-details .pd-color .pd-color-choose .cc-item label.cc-yellow {
-  background: #FFFF00;
-}
-
-.product-details .pd-color .pd-color-choose .cc-item label.cc-violet {
-  background: #8230E3;
-}
-
-.product-details .pd-color .pd-color-choose .cc-item label.cc-blue {
-  background: #3039e3;
+.product-details .pd-color .pd-color-choose .cc-item input[type="radio"]:checked {
+  border: 5px solid;
 }
 
 .product-details .pd-size-choose {
@@ -4698,4 +4682,12 @@ ol {
   position: absolute;
   right: 0;
   top: 0;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+.item-product-shop {
+  padding-bottom: 24px;
 }
