--- a/laravel-demo/public/front/css/style.css
+++ b/laravel-demo/public/front/css/style.css
@@ -2765,11 +2765,13 @@ ol {
 }
 
 .cart-table table tr td.cart-title {
-  text-align: left;
+  text-align: center;
 }
 
 .cart-table table tr td.cart-title h5 {
   color: #252525;
+  max-width: 500px;
+  margin: auto;
 }
 
 .cart-table table tr td.p-price {
@@ -3872,7 +3874,7 @@ ol {
 .login-form h2 {
   color: #252525;
   font-weight: 700;
-  font-size: 40px;
+  font-size: 30px;
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 35px;
