--- a/laravel-demo/public/dashboard/main.css
+++ b/laravel-demo/public/dashboard/main.css
@@ -1,4 +1,4 @@
-/*!
+/*
  * Fancytree "Win8" skin.
  *
  * DON'T EDIT THE CSS FILE DIRECTLY, since it is automatically generated from
@@ -33755,7 +33755,7 @@ legend {
     background: url(assets/fonts/ZW.svg) no-repeat
 }
 
-/*!
+/*
  * Cropper.js v1.4.3
  * https://fengyuanchen.github.io/cropperjs
  *
